# tfcv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fix.patch  tfcv.podspec
.github/workflows/: build-android.yml  build-ios.yml  build.yml  test-pipeline.yml
cmake/: tfcvConfig.cmake
cmake/modules/: configure-opencv.cmake  iOS.cmake  ios.toolchain.cmake  strip.cmake  target_dependencies.cmake
cmake/templates/: ios.podspec
include/opencv2/: cvconfig.h  opencv.hpp  opencv_modules.hpp
include/tfcv/: defs.hpp  image.hpp  utility.hpp
include/tfcv/ml/: classifier.hpp  localinterpreter.hpp  processor.hpp
include/tfcv/ml/preprocessing/: op.hpp  ops.hpp  pipeline.hpp
platform/android/: build.gradle.kts  settings.gradle.kts
platform/android/gradle/: libs.versions.toml
platform/android/gradle/wrapper/: gradle-wrapper.properties
platform/android/tfcv/: .gitignore  build.gradle.kts
platform/android/tfcv/src/cxx/: .gitignore
platform/android/tfcv/src/cxx/include/tfcv/tfcv/ml/: gmsinterpreter.hpp
platform/android/tfcv/src/main/: AndroidManifest.xml
platform/ios/public/: dummy.mm
src/: Image.cxx  LocalInterpreter.cxx  Pipeline.cxx  Processor.cxx  testapp.cxx
